--- a/.config
+++ b/.config
@@ -4998,10 +4998,10 @@ CONFIG_PACKAGE_luci-theme-bootstrap=y
 # CONFIG_PACKAGE_luci-theme-edge-1806 is not set
 # CONFIG_PACKAGE_luci-theme-edge-1907 is not set
 # CONFIG_PACKAGE_luci-theme-infinityfreedom is not set
-# CONFIG_PACKAGE_luci-theme-material is not set
+CONFIG_PACKAGE_luci-theme-material=y
 # CONFIG_PACKAGE_luci-theme-neobird-1806 is not set
-# CONFIG_PACKAGE_luci-theme-openwrt is not set
-# CONFIG_PACKAGE_luci-theme-openwrt-2020 is not set
+CONFIG_PACKAGE_luci-theme-openwrt=y
+CONFIG_PACKAGE_luci-theme-openwrt-2020=y
 # CONFIG_PACKAGE_luci-theme-purple-1806 is not set
 # CONFIG_PACKAGE_luci-theme-rosy-1806 is not set
 # end of 4. Themes
