--- a/.config
+++ b/.config
@@ -1663,7 +1663,8 @@ CONFIG_ZABBIX_POSTGRESQL=y
 # CONFIG_PACKAGE_debian-archive-keyring is not set
 # CONFIG_PACKAGE_debootstrap is not set
 # CONFIG_PACKAGE_gkrellmd is not set
-# CONFIG_PACKAGE_htop is not set
+CONFIG_PACKAGE_htop=y
+CONFIG_HTOP_LMSENSORS=y
 # CONFIG_PACKAGE_ipmitool is not set
 # CONFIG_PACKAGE_monit is not set
 # CONFIG_PACKAGE_monit-nossl is not set
@@ -4740,8 +4741,8 @@ CONFIG_PACKAGE_luci-app-argon-config=y
 # CONFIG_PACKAGE_luci-app-babeld is not set
 # CONFIG_PACKAGE_luci-app-baidupcs-web is not set
 # CONFIG_PACKAGE_luci-app-bcp38 is not set
-CONFIG_PACKAGE_luci-app-bird1-ipv4=y
-CONFIG_PACKAGE_luci-app-bird1-ipv6=y
+# CONFIG_PACKAGE_luci-app-bird1-ipv4 is not set
+# CONFIG_PACKAGE_luci-app-bird1-ipv6 is not set
 # CONFIG_PACKAGE_luci-app-bmx6 is not set
 # CONFIG_PACKAGE_luci-app-bmx7 is not set
 # CONFIG_PACKAGE_luci-app-cifs-mount is not set
@@ -5747,10 +5748,10 @@ CONFIG_PACKAGE_v2ray-geosite=y
 # CONFIG_PACKAGE_batmand is not set
 # CONFIG_PACKAGE_bcp38 is not set
 # CONFIG_PACKAGE_bfdd is not set
-CONFIG_PACKAGE_bird1-ipv4=y
-CONFIG_PACKAGE_bird1-ipv4-uci=y
-CONFIG_PACKAGE_bird1-ipv6=y
-CONFIG_PACKAGE_bird1-ipv6-uci=y
+# CONFIG_PACKAGE_bird1-ipv4 is not set
+# CONFIG_PACKAGE_bird1-ipv4-uci is not set
+# CONFIG_PACKAGE_bird1-ipv6 is not set
+# CONFIG_PACKAGE_bird1-ipv6-uci is not set
 # CONFIG_PACKAGE_bird1c-ipv4 is not set
 # CONFIG_PACKAGE_bird1c-ipv6 is not set
 # CONFIG_PACKAGE_bird1cl-ipv4 is not set
